# opencl-motion-magnification

./: .gitignore  AmpPhaseShift.hpp  Buttw.hpp  CMakeLists.txt  LICENSE  PhaseDiffAndAmp.hpp  README.md  omm.cpp
opencl/: amp_phase_shift.cl  buttw.cl  phase_diff_and_amp.cl
